--- a/Coiffure/Properties/Resources.resx
+++ b/Coiffure/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="pexels-nick-demou-1319460" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pexels-nick-demou-1319460.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="barber_scissors_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\barber_scissors_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -166,20 +169,17 @@
   <data name="search_more_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\search_more_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pay_date_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pay_date_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="secure_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\secure_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="pexels-josh-sorenson-9953001" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pexels-josh-sorenson-9953001.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cancel_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cancel_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="barbershop_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\barbershop_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pexels-josh-sorenson-995300" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pexels-josh-sorenson-995300.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="hair_clip_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hair_clip_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -196,20 +196,17 @@
   <data name="reserve_24px_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reserve_24px_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="minimize_window_24px_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\minimize_window_24px_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="subtract_24px_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\subtract_24px_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="left_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\left_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="pexels-mathias-pr-reding-11213201" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pexels-mathias-pr-reding-11213201.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="left_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\left_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="account_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\account_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="customer_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\customer_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -225,6 +222,9 @@
   </data>
   <data name="barber_chair_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\barber_chair_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tune_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tune_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="expensive_price_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\expensive_price_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -256,40 +256,43 @@
   <data name="pexels-nick-demou-13194621" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pexels-nick-demou-13194621.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="invert_colors_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\invert_colors_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="plus_+_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\plus_+_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pexels-josh-sorenson-995300" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pexels-josh-sorenson-995300.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pexels-josh-sorenson-9953001" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pexels-josh-sorenson-9953001.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="real_estate_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\real_estate_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pexels-panumas-nikhomkhai-1148820 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pexels-panumas-nikhomkhai-1148820 (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pexels-caleb-oquendo-3162022" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pexels-caleb-oquendo-3162022.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="account_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\account_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="minimize_window_24px_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\minimize_window_24px_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="delete_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\delete_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="post_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\post_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="tune_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tune_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="left_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\left_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="clock_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\clock_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="user_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pay_date_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pay_date_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="invert_colors_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\invert_colors_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="post_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\post_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pexels-panumas-nikhomkhai-1148820 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pexels-panumas-nikhomkhai-1148820 (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="reception_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\reception_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
